--- a/my-app/src/pages/SignUp/SignUp.module.css
+++ b/my-app/src/pages/SignUp/SignUp.module.css
@@ -1,4 +1,4 @@
-* {
+.maha_container {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 98vh;
 }
 
 .container {
