--- a/my-app/src/components/RightBar/RightBar.module.css
+++ b/my-app/src/components/RightBar/RightBar.module.css
@@ -1,6 +1,104 @@
 .right_side {
   width: 77%;
-  height: auto;
+  height: 820px;
   background-color: #171717;
   border-radius: 10px;
+  font-family: sans-serif;
+  color: white;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+}
+
+.section_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 40px 10px 40px;
+}
+
+.section_header h2 {
+  font-size: 24px;
+  color: white;
+}
+
+.section_header a {
+  color: #b3b3b3;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.section_header a:hover {
+  color: white;
+}
+
+.song_grid {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  gap: 10px;
+  padding: 0 40px;
+  scrollbar-width: none;
+}
+
+.song_card {
+  flex: 0 0 auto;
+  width: 180px;
+  padding: 5px 10px 0px 10px;
+  line-height: 1.5;
+  transition: background-color 0.3s ease;
+  border-radius: 5px;
+}
+
+.song_card:hover {
+  background-color: #1f1f1f;
+}
+
+.image_wrapper {
+  position: relative;
+  width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.image_wrapper img {
+  width: 100%;
+  border-radius: 8px;
+  display: block;
+}
+
+.play_icon {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(30, 215, 96, 0.9);
+  color: rgb(0, 0, 0);
+  height: 20px;
+  width: 20px;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image_wrapper:hover .play_icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+}
+
+.song_card h3 {
+  font-size: 16px;
+  color: white;
+  margin: 10px 0 5px;
+}
+
+.song_card p {
+  font-size: 13px;
+  color: #b3b3b3;
+  font-weight: 500;
+  overflow: hidden;
 }
