--- a/my-app/src/components/RightBar/RightBar.module.css
+++ b/my-app/src/components/RightBar/RightBar.module.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 40px 10px 40px;
+  padding: 0px 30px 0px 30px;
 }
 
 .section_header h2 {
@@ -37,7 +37,7 @@
   overflow-x: auto;
   white-space: nowrap;
   gap: 10px;
-  padding: 0 40px;
+  padding: 0 20px;
   scrollbar-width: none;
 }
 
@@ -101,4 +101,11 @@
   color: #b3b3b3;
   font-weight: 500;
   overflow: hidden;
+}
+
+.image_wrapper_1 img {
+  border-radius: 8px;
+  height: 170px;
+  width: 170px;
+  border-radius: 50%;
 }
