--- a/my-app/src/components/FooterUp/FooterUp.module.css
+++ b/my-app/src/components/FooterUp/FooterUp.module.css
@@ -6,16 +6,11 @@
 
 .img_cards {
   height: 270px;
-  width: 250px;
+  width: 270px;
   margin: 10px;
   line-height: 15px;
 }
 
-.img_cards img {
-  height: 200px;
-  width: 200px;
-  border-radius: 10px;
-}
 .img_cards h3 {
   color: white;
   font-size: 15px;
@@ -26,17 +21,21 @@
   font-size: 14px;
 }
 
-.img_cards .icon_footer {
-  margin-left: 5px;
-  height: 30px;
-  width: 30px;
+.img_cards_icons {
+  margin-top: 20px;
+  /* margin-left: 25px; */
 }
 
-.img_cards .icon_footer:hover {
-  margin-left: 5px;
-  height: 30px;
-  width: 30px;
-  padding: 3px;
+.icon_footer {
+  height: 20px;
+  width: 20px;
+  margin-left: 15px;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #1f1f1f;
+}
+
+.icon_footer:hover {
   border-radius: 50%;
   background-color: #575656;
 }
