--- a/my-app/src/components/LeftBar/LeftBar.module.css
+++ b/my-app/src/components/LeftBar/LeftBar.module.css
@@ -1,6 +1,6 @@
 .left_side {
   width: 23%;
-  height: auto;
+  height: 83vh;
   background-color: #171717;
   color: white;
   border-radius: 10px;
@@ -68,7 +68,7 @@
   margin-top: auto;
   font-size: 11px;
   color: #b3b3b3;
-  margin-top: 16rem;
+  margin-top: 4rem;
   margin-left: 1rem;
 }
 
