--- a/my-app/src/pages/TrendingSongs/TrendingSongs.module.css
+++ b/my-app/src/pages/TrendingSongs/TrendingSongs.module.css
@@ -1,3 +1,11 @@
+.main_section {
+  display: flex;
+  width: 100%;
+  background-color: black;
+  height: 100%;
+  gap: 10px;
+}
+
 .right_side {
   width: 77%;
   height: 83vh;
@@ -41,7 +49,7 @@
 .song_grid {
   display: flex;
   overflow-x: auto;
-  white-space: nowrap;
+  flex-wrap: wrap;
   gap: 10px;
   padding: 0 20px;
   scrollbar-width: none;
@@ -110,11 +118,4 @@
   color: #b3b3b3;
   font-weight: 500;
   overflow: hidden;
-}
-
-.image_wrapper_1 img {
-  border-radius: 8px;
-  height: 170px;
-  width: 170px;
-  border-radius: 50%;
 }
