--- a/my-app/src/components/LeftBar/LeftBar.module.css
+++ b/my-app/src/components/LeftBar/LeftBar.module.css
@@ -26,6 +26,13 @@
 .library_icon {
   width: 1.5rem;
   height: 1.5rem;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.library_icon:hover {
+  background-color: #343333;
+  border-radius: 50%;
 }
 
 .card {
@@ -118,4 +125,21 @@
   font-size: 0.7rem;
   margin-top: 15px;
   margin-left: 15px;
+}
+
+.create_popup {
+  width: 100%;
+  background-color: #1f1f1f;
+  color: white;
+  padding: 7px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+
+.input {
+  padding: 8px;
+  width: 60%;
+  margin-right: 20px;
+  border-radius: 4px;
+  border: none;
 }
