--- a/my-app/src/pages/TrendingSongs/TrendingSongs.module.css
+++ b/my-app/src/pages/TrendingSongs/TrendingSongs.module.css
@@ -119,3 +119,14 @@
   font-weight: 500;
   overflow: hidden;
 }
+
+.details {
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
+}
+
+.threedot {
+  margin-top: -50px;
+  cursor: pointer;
+}
