--- a/my-app/src/components/LeftBar/LeftBar.module.css
+++ b/my-app/src/components/LeftBar/LeftBar.module.css
@@ -136,10 +136,15 @@
   border-radius: 8px;
 }
 
+.create_popup h4 {
+  margin-bottom: 10px;
+}
+
 .input {
   padding: 8px;
-  width: 60%;
-  margin-right: 20px;
+  margin-bottom: 20px;
   border-radius: 4px;
   border: none;
+  width: 300px;
+  background-color: #1f1f1f;
 }
