artist page added

--- a/my-app/src/components/RightBar/RightBar.module.css
+++ b/my-app/src/components/RightBar/RightBar.module.css
@@ -54,6 +54,7 @@
   line-height: 1.5;
   transition: background-color 0.3s ease;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .song_card:hover {
