--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -22,6 +22,16 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.custom-toast {
+  position: fixed !important;
+  top: 1rem !important;
+  right: 1rem !important;
+  left: auto !important;
+  transform: none !important;
+  z-index: 1099; /* Optional: Ensure it appears on top */
+}
+
 body {
   background-color: rgb(0, 0, 0);
 }
