--- a/my-app/src/components/ImageUpload/ImageUpload.module.css
+++ b/my-app/src/components/ImageUpload/ImageUpload.module.css
@@ -2,12 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 0px;
-  margin: 10px auto;
-  max-width: 400px;
+  padding-top: 10px;
+  margin: -10px auto;
+  width: 300px;
   border-radius: 12px;
   background-color: #0000;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   border-style: none;
 }
