some imporovements in the UI

--- a/my-app/src/pages/Checkout/Checkout.module.css
+++ b/my-app/src/pages/Checkout/Checkout.module.css
@@ -5,8 +5,8 @@
 }
 
 .button {
-  background-color: #635bff;
-  color: white;
+  background-color: #1ed760;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   padding: 12px;
   border: none;
