--- a/my-app/src/pages/Plans/Plans.module.css
+++ b/my-app/src/pages/Plans/Plans.module.css
@@ -180,7 +180,7 @@
 .closeBtn {
   margin-top: 20px;
   margin-left: 25px;
-  background-color: #1ed760;
+  background-color: #29c760;
   color: white;
   padding: 10px 16px;
   border: none;
