--- a/my-app/src/pages/TrendingSongs/TrendingSongs.module.css
+++ b/my-app/src/pages/TrendingSongs/TrendingSongs.module.css
@@ -48,8 +48,9 @@
 
 .song_grid {
   display: flex;
-  overflow-x: auto;
   flex-wrap: wrap;
+  overflow-x: auto;
+  white-space: nowrap;
   gap: 10px;
   padding: 0 20px;
   scrollbar-width: none;
@@ -62,6 +63,7 @@
   line-height: 1.5;
   transition: background-color 0.3s ease;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .song_card:hover {
@@ -88,16 +90,22 @@
   position: absolute;
   bottom: 0%;
   right: 0%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(30, 215, 96, 0.9);
+  transform: translate(-20%, -20%);
+  background-color: #26d263;
   color: rgb(0, 0, 0);
   height: 20px;
   width: 20px;
-  padding: 10px;
+  padding: 13px;
   border-radius: 50%;
   cursor: pointer;
   opacity: 0;
   transition: opacity 0.3s ease;
+}
+
+.play_icon:hover {
+  background-color: #2de46d;
+  padding: 14px;
+  transition: 0.1s ease;
 }
 
 .image_wrapper:hover .play_icon {
@@ -120,53 +128,16 @@
   overflow: hidden;
 }
 
-.details {
-  display: flex;
-  align-items: end;
-  justify-content: flex-end;
-}
-
-.threedot {
-  margin-top: -50px;
-  cursor: pointer;
-}
-
-.popupMenu {
-  background: #1f1f1f;
-  padding: 10px;
-  border-radius: 5px;
-  color: white;
-}
-
-.playlistPopup {
-  position: fixed;
-  top: 30%;
-  left: 35%;
-  background: #161616;
-  padding: 20px;
+.image_wrapper_1 img {
   border-radius: 8px;
-  color: white;
-  z-index: 100;
-  width: 300px;
-}
-.playlistPopup ul {
-  list-style: none;
-  padding: 0;
-}
-.playlistPopup li {
-  padding: 8px;
-  cursor: pointer;
-}
-.playlistPopup li:hover {
-  background: #1db954;
+  height: 170px;
+  width: 170px;
+  border-radius: 50%;
 }
 
-.btn {
-  padding: 0.5625rem 2rem;
-  font-size: 12px;
-  background-color: white;
-  color: black;
-  border-radius: 1.5625rem;
-  border: none;
-  cursor: pointer;
+.audio_icon_link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000000;
 }
